# SMX

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  SMX_perturbation_theory.md  md_to_pdf.py  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: README.md  api_reference.md  conf.py  datasets.md  examples.md  faithfulness.md  graph.md  index.md  installation.md  pipeline.md  plotting.md  predicates.md  quickstart.md  repository.md  zones.md
docs/_static/: custom.css
examples/: generate_gallery_images.py  quickstart.ipynb  quickstart.py
experiments/: run_experiment.py  run_shap.py
experiments/MLP/bank_notes/: lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_bank_notes.ipynb
experiments/MLP/forage/: pca_aggregator_forage.ipynb
experiments/MLP/milk/: pca_aggregator_milk.ipynb
experiments/MLP/soil/: pca_aggregator_soil.ipynb
experiments/MLP/soil_types/: lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_soil_types.ipynb
experiments/MLP/sweet_pepper/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_sweet_pepper.ipynb  rbo_rank.csv  shap_sweet_pepper.csv
experiments/MLP/synthetic/: pca_aggregator_synthetic.ipynb
experiments/MLP/tomato/: feature_importance.csv  pca_aggregator_tomato.ipynb  rbo_rank.csv  shap_tomato.csv  shap_tomato.py
experiments/PLS/forage/: pca_aggregator_forage.ipynb
experiments/PLS/milk/: pca_aggregator_milk.ipynb
experiments/PLS/soil/: feature_importance.csv  lrc_pert_natural.csv  pca_aggregator_soil.ipynb  pca_aggregator_soil.py
experiments/PLS/soil_types/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_soil_types.ipynb  rbo_rank.csv
experiments/PLS/soil_types_unir/: soil_types_unir_notebook_full_comparisson.ipynb
experiments/PLS/soyben/: feature_importance.csv  lrc_pert_natural.csv  pca_aggregator_soyben.ipynb  rbo_rank.csv  shap_soyben.csv  shap_soyben.py
experiments/PLS/sweet_pepper/: feature_importance.csv  lrc_pert_natural.csv  pca_aggregator_sweet_pepper.ipynb  rbo_rank.csv
experiments/PLS/synthetic/: lrc_pert_natural.csv  rbo_rank.csv
experiments/PLS/tomato/: feature_importance.csv  lrc_pert_natural.csv  pca_aggregator_tomato.ipynb  rbo_rank.csv
experiments/SVM/bank_notes/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_bank_notes.ipynb
experiments/SVM/forage/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_forage.ipynb
experiments/SVM/milk/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_milk.ipynb  rbo_rank.csv
experiments/SVM/soil/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_soil.ipynb  rbo_rank.csv
experiments/SVM/soil_types/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_soil_types.ipynb  rbo_rank.csv
experiments/SVM/sweet_pepper/: feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  rbo_rank.csv  shap_sweet_pepper.csv  shap_sweet_pepper.py
experiments/SVM/synthetic/: pca_aggregator_synthetic.ipynb
experiments/SVM/tomato/: feature_importance.csv  lrc_pert_natural.csv  pca_aggregator_tomato.ipynb  rbo_rank.csv
real_datasets/xrf/: soil.json  soyben15.csv  sweet_pepper.csv
smx/: __init__.py  debugging.py  explaining.py  pipeline.py
smx/datasets/: __init__.py  synthetic.py
smx/evaluation/: __init__.py  faithfulness.py
smx/graph/: __init__.py  builder.py  centrality.py  interpretation.py
smx/plotting/: __init__.py  gallery.md  summary.py  theme.py  threshold.py  zones.py
smx/predicates/: __init__.py  bagging.py  generation.py  metrics.py
smx/zones/: __init__.py  aggregation.py  build.py  extraction.py
