[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spectral-model-explainer"
version = "0.1.4"
description = "A python library for spectral-zone-level explanations in machine learning models trained on spectral data"
authors = [
    "Ribeiro Jose Vinicius <ribeirojosevinicius@gmail.com>",
    "Goncalves Rafael Figueira <capitao.rafa@gmail.com>",
    "Barbon Junior Sylvio <sylvio.barbonjunior@units.it>",
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["spectroscopy", "explainability", "machine-learning", "eXplainable-AI"]
license = "MIT"
license-files = ["LICENSE"]

packages = [{ include = "smx" }]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "networkx>=3.0",
]

[tool.poetry.optional-dependencies]
plotting = [
    "plotly>=5.0",
    "nbformat>=4.2",
]
dev = [
    "pytest>=7.0",
    "plotly>=5.0",
    "nbformat>=4.2",
]

[project.urls]
Homepage = "https://github.com/joseviniciusr/SMX"
Repository = "https://github.com/joseviniciusr/SMX"