[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spectral-model-explainer"
version = "0.1.4"
description = "A python library for spectral-zone-level explanations in machine learning models trained on spectral data"
authors = [
    "Ribeiro Jose Vinicius <ribeirojosevinicius@gmail.com>",
    "Goncalves Rafael Figueira <capitao.rafa@gmail.com>",
    "Barbon Junior Sylvio <sylvio.barbonjunior@units.it>",
]
readme = "README.md"
license = "MIT"
keywords = ["spectroscopy", "explainability", "machine-learning", "eXplainable-AI"]
homepage = "https://github.com/joseviniciusr/SMX"
repository = "https://github.com/joseviniciusr/SMX"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.24"
pandas = ">=2.0"
scikit-learn = ">=1.3"
networkx = ">=3.0"
plotly = { version = ">=5.0", optional = true }
nbformat = { version = ">=4.2", optional = true }

[tool.poetry.extras]
plotting = ["plotly", "nbformat"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
plotly = ">=5.0"
nbformat = ">=4.2"

[[tool.poetry.packages]]
include = "smx"